--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2044,6 +2044,14 @@
 ### 2017/03/19 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=13753
 - <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=13753" target="_blank">林臻嫺：主事者的識見決定司改往哪走</a></h2><p>近來司改議題沸沸揚揚，討論議題涉及我國將來的法律體系規範走向甚深且鉅。其實，各國的法律，都是為解決特定時空下的特定「政治」問題（不管是不是以人民抬出作為名義），也同時受到特定時空下的社會環境、及特定人的識見所侷限，若涉及法典範的繼受或移轉，所可能牽動的政治權力的重整、財政經濟的耗動，可能遠大過於一例一休或同婚的層面。</p><p>舉日本為例，其從江戶時期原採的「大岡裁判法」，開始改依西洋法例，是自安政元年（即1854年）陸續被迫簽下「不平等條約」起，因在關稅、領事等方面均喪失自主權為緣由。即如原東大教授「三ヶ月章」在其著作「法學入門」即曾言：法繼受是一種手段的性格，是為了達成特定政治目標--即改正不平等條約。而日本第一次的司法改革，原欲採行「法國法」，原因無他，當時「拿破崙法典」影響力橫掃全世界，被視為最強制度。</p><p>1869年，日本初代的「司法卿」「江藤新平」，找來日本語言天才「箕作麟祥」，請其翻譯拿破崙諸法典，其天真的想法，認為只要直接將原典直接譯成日文後，公布施行即可完成司法改革！</p><p>但是，當時的「箕作麟祥」，雖是語言天才，但全無任何法學基礎，其翻譯法典過程，完全困坐愁城，最後不得已，日本政府只好同意其前往法國，招募正統法律學者到日。</p><p>當時在巴黎大學執教的「波斯那德（Boissonade）」博士（後被譽為「日本司法之父」），同意赴日後，即以當時法國法典為模範，著手起草日本法典，並在司法省草創法學校，主要教授法語及法國法律制度，在1880年並先頒佈「刑法」與「治罪法」（相當於刑事訴訟法），此法率先破除日本傳統的拷問（刑求）制度，使日本刑法開始現代化。</p><p>但當時相繼到現在東京大學的前身、即「開成學校」教書的英國人Grigsby、及美國人H.Terry，採英語教學，並大量在教學中使用著名的英國法學者J.Austin 及H.S.Maine等的著作，使當時盛行的英美普通法概念也逐漸在日本萌芽。</p><p>故到明治20年（1887年）左右，日本法律學界一直是處於二大法系---即「法國法」（司法省法學校出身者為中心，還有後來的明治大學、法政大學等）與「英國法」（東京大學出身，還有後來的中央大學及早稻田大學等）旗幟鮮明、競爭對立的情形。</p><p>到1890年，仍由「波斯那德（Boissonade）」所起草、以法國民法為中心的民法典要施行時，兩派對立到達最高點。當時英美派反對民法施行，認為民法應反應各國的歷史相對性，並無超越時空的普遍妥當性，主張新民法與當時明治的日本社會並不相容，學者「穗積八束」更以「民法出、忠孝亡」為題論述，更引發轟動，史稱「民法典論爭」，最後延期派獲勝，1895年「波斯那德（Boissonade）」黯然回去法國。</p><p>但英美派最後並沒有佔到上風，於1882年曾為憲法調查而赴歐考察的「伊藤博文」，在柏林大學聽Rudolf von Gneist及到維也納大學聽Lorenz von Stein講課後，對德國法因而心生嚮往，伊藤博文歸國後，即決定要以「普魯士憲法」作為明治憲法的典範，並另招募德國人H.Roesler教授到日幫忙。</p><p>1889年明治憲法發佈隔年，由德國人Otto Rudorff幫忙起草的「裁判所構成法」及民事訴訟法相繼完成，而「波斯那德（Boissonade）」起草的民法在施行延期後，改由穗積陳重、梅謙次郎、富井政章3人重新起草，並改採德國民法典的編排，亦於1896年施行。</p><p>學者分析嗣後的立法及學說，均改向德國法一面倒的原因主要有三，一是政治的理由，即因作為萬法之本的明治憲法，即以普魯士憲法為典範。二是實際的理由，即英美法著重的判例累積及不成文法的傳統，均使日本難於短期間內順利繼受。三是理論的理由，德國的諸法典，都在拿破崙諸法典後才公布生效，故體例及觀念均較為新穎，與新興的日本當時社會較為相稱，故德國民法方屬最適合明治時期的日本，最後成為法律相關各界的共識，而在相關的法體制改造均趨於粲然完備之後，維新後的日本果然一舉擠身於世界強國之林。</p><p>觀察日本最初的司法改革與繼受，其實是為解決特定的政治問題（即改正不平等條約），一開始的主事者即江藤新平，原以為是透過「翻譯」就能解決的小事情，但最後究竟是往法國法、英美法、德國法去發展，實際上卻是經過一段不短時間的「法系鬥爭」及「論理辯證」，及考量現實社會經濟（英美法不易繼受）等條件的侷限下，最後作出的不得不然選擇。我們的司法改革，要往哪裡去？是淺碟鋸箭以削足適履？或真能走向破舊立新？或許也考驗著主事者的識見到哪吧！</p><p>※作者為台南地院法官</p> #林臻嫺 #法官 #議事程序 #上報 #2017-03-19
 
+# 江文君
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/03/20 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/new/20170320/1080232/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/new/20170320/1080232/" target="_blank">【司改交鋒】檢察官心聲：誰能收服皮卡丘？！</a></h2><p>江文君／台北地檢署檢察官</p><p>前陣子有司改委員以「寶可夢議題也可以排上司改會議議程？」諷刺檢察官迴避定位的問題，民間團體又主張應該要設小學堂、議題資料要親民化。的確，「寶可夢議題」十分貼近人民的生活，使用親民的語言讓大家可以明白議題是在講什麼，問題在那裡，有什麼不好。既然如此，那麼就這麼講吧！檢察官就是個神奇寶貝，誰收服他誰就有強大的力量，人民擁有他，可以守護每一吋淨土，淪落到財閥的手裡，就是全民災難的開始。</p><p>美國的總統多數都很有錢，第一名是川普大總統！他自稱身家財產有100億美元，即使保守一點的替他估計，至少也在45億美元到37億美元之間，還是可以穩坐第一名。甘迺迪的總財產有10億美元。川普沒上來前，甘迺迪是第一名。柯林頓有5千500萬美元，如果這次總統選舉，是希拉蕊當選的話，還是有錢人才能當選美國總統。比較令人好奇的是，這些總統卸任後，財富都會持續的增加，也都能安然下台。</p><p>同樣是身陷醜聞，川普被媒體報導選舉期間與俄國私通，也沒聽說有檢察官要開始調查；韓國的朴槿惠因為閨蜜干政的醜聞，短短幾個月內，就被轟下了青瓦台。美國檢察官是行政官的制度，川普是怎麼利用來收服檢察官的？（攻略秘笈請參考：吳延展：「檢察官，你被開除了！」、陳瑞仁：「美國聯邦檢察官辭職風波」……）。</p><p>再來看看台版的皮卡丘，檢察官的身影貫穿整部刑事訴訟法，從偵查、起訴、公訴一路到執行，起得比法官早，走得比法官遠。偵查結果不是只有起訴犯罪的被告，沒起訴必要的可以做等同判決效力的緩起訴處分，該還清白的就得不起訴，起訴後也還可以撤回起訴。檢察官不提起公訴，法官哪來攸關公益的案子可以審，檢察官不開啟訴訟大門，關在屋裡的法官難道自己喊：「我要實現司法正義」嗎？檢察官的工作足跡遍及山巔海角，哪裡是小小的偵查庭可以全部形容。</p><p>幾天前媒體報導，有位桃園的女檢察官入行才兩年，抽絲剝繭，查出科技公司收購高污染廢棄物，再低價賣給環保蟑螂，棄置、掩埋在桃竹一帶的土地、倉庫，做無本生意，5年來濫倒896噸爆表的強酸、強鹼，獲利8270萬元。看著報導裡堆積如山的垃圾場以及這位女檢察官的照片，內心的感觸很深，十分年輕娟秀的臉龐，為什麼不立志當下午茶貴婦，何苦進入這一行？青春易逝，20年走過，再來悲嘆自己為何走到今天這一步嗎？</p><p>但是再看深一點，她咬著手指，非常專注在卷證裡。或許年輕的她比我更明白，這個世界有錢的人越來越有錢，可以對抗的力量越來越少，因為變少反而變得更重要。她知道這份力量的重要，所以願意加進來，在檢察官不是上命下從的行政官，制度還有那麼一點空間時，把自己貢獻給更有意義的工作。她真的讓我相信，年輕不是罪，制度才是問題。向年輕的世代致敬！</p><p>哦！順便幫司改國是會議打一下廣告。誰能收服皮卡丘？3月22日司改國是會議見分曉！</p> #江文君 #檢察官 #檢察官職務 #蘋果日報 #2017-03-20
+
 # 林達
 ## backgrounds
 - 檢察官
@@ -2070,11 +2078,11 @@
 
 # 吳東都
 ## backgrounds
-- 其他
+- 法官
 
 ## articles
 ### 2017/03/20 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170320/1079971/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170320/1079971/" target="_blank">【司改交鋒】庭長吳東都：「裁判憲法審查」的實相與虛相</a></h2><p>吳東都／最高行政法院庭長</p><p>司法改革國是會議第二分組日前通過要建立「裁判憲法審查」，也就是日後司法院大法官可以審查司法裁判所表示的見解是否牴觸憲法。</p><p>其實，我國現在的釋憲實務已經有「半套」的「裁判憲法審查」。怎麼說呢？大家舉的例子是司法院釋字第242號鄧元貞重婚案。不過在此之前，釋字第185號解釋理由書即已載明：「確定終局裁判所適用之法律或命令，或其適用法律、命令所表示之見解發生有牴觸憲法之疑義，經本院依人民聲請解釋認為與憲法意旨不符時，是項確定終局裁判即有再審或非常上訴之理由」。其中「適用法律、命令所表示之見解發生有牴觸憲法之疑義」，就是把確定終局裁判的法律見解有無牴觸憲法，當成大法官違憲審查的對象。只是這段文字曇花一現，之後就沒再出現。</p><p>最主要的是，終局確定裁判如果援用最高(行政)法院判例或庭長法官聯席會議關於統一法律見解的決議，甚至雖沒有舉出判例案號，但授用其內容，屬於實質上援用判例，受該確定裁判不利之人民，得依法定程序聲請大法官審查該判例或決議有無牴觸憲法，這是藉由判例或決議審查該確定裁判所表示之見解。此外，因行政命令也是大法官違憲審查的客體，行政法院經常適用行政機關的行政命令（尤其函釋）作成裁判，這時是將行政命令的見解納為裁判的見解，大法官審查該行政命令有無牴觸憲法，也算是審查行政法院裁判所表示之見解有無違憲。這是現在「裁判憲法審查」的「實相」。</p><p>重要的是，要仿德國法制建立「裁判憲法審查」制度，首先必須說服社會，大法官的效率足以膺此重任。原因是自民國92年10月大法官不分屆次後，「翁岳生法院」平均一年作成16.75件解釋，「賴英照法院」是15.58件，「賴浩敏法院」則是9.75件。現在的「許宗力法院」勵精圖治，依照迄今四又三分之一個月作成6件解釋的速度計算，一年應有18件。這種效率遠不足以應付建立「裁判憲法審查」制度後，會有如潮水般湧向大法官的聲請案件量。屆時可能經「裁量選案」後，僅受理少數案件，結果與現制無異，這可能是未來「裁判憲法審查」的「虛相」。</p><p>再者，德國聯邦憲法院對其裁判憲法訴願，深恐其被說是「超級第四審」，因此致力於憲法審判權與一般法院審判權如何分工的論述。我國未來的「裁判憲法審查」勢必要借用德國此方面的理論。然而現在的15位大法官，除司法院院長外，餘無一是留德的公法學者。大法官結構失衡，也是一問題。</p><p>最後，「裁判憲法審查」是極具專業的議題，即使法律人也未必知多少。第二分組討論此議題時，委員亦有諸多的質疑，甚至有人認為違憲。然而結果是一次會議中，委員就全數舉手通過。其中超過半數的非法律人，才剛接觸此議題，就敢舉手同意。見此情形，筆者初是心驚膽跳，接者會心一笑，最後是仰天長嘯──天啊！</p> #吳東都 #其他 #第二組 #憲法訴願 #蘋果日報 #2017-03-20
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170320/1079971/" target="_blank">【司改交鋒】庭長吳東都：「裁判憲法審查」的實相與虛相</a></h2><p>吳東都／最高行政法院庭長</p><p>司法改革國是會議第二分組日前通過要建立「裁判憲法審查」，也就是日後司法院大法官可以審查司法裁判所表示的見解是否牴觸憲法。</p><p>其實，我國現在的釋憲實務已經有「半套」的「裁判憲法審查」。怎麼說呢？大家舉的例子是司法院釋字第242號鄧元貞重婚案。不過在此之前，釋字第185號解釋理由書即已載明：「確定終局裁判所適用之法律或命令，或其適用法律、命令所表示之見解發生有牴觸憲法之疑義，經本院依人民聲請解釋認為與憲法意旨不符時，是項確定終局裁判即有再審或非常上訴之理由」。其中「適用法律、命令所表示之見解發生有牴觸憲法之疑義」，就是把確定終局裁判的法律見解有無牴觸憲法，當成大法官違憲審查的對象。只是這段文字曇花一現，之後就沒再出現。</p><p>最主要的是，終局確定裁判如果援用最高(行政)法院判例或庭長法官聯席會議關於統一法律見解的決議，甚至雖沒有舉出判例案號，但授用其內容，屬於實質上援用判例，受該確定裁判不利之人民，得依法定程序聲請大法官審查該判例或決議有無牴觸憲法，這是藉由判例或決議審查該確定裁判所表示之見解。此外，因行政命令也是大法官違憲審查的客體，行政法院經常適用行政機關的行政命令（尤其函釋）作成裁判，這時是將行政命令的見解納為裁判的見解，大法官審查該行政命令有無牴觸憲法，也算是審查行政法院裁判所表示之見解有無違憲。這是現在「裁判憲法審查」的「實相」。</p><p>重要的是，要仿德國法制建立「裁判憲法審查」制度，首先必須說服社會，大法官的效率足以膺此重任。原因是自民國92年10月大法官不分屆次後，「翁岳生法院」平均一年作成16.75件解釋，「賴英照法院」是15.58件，「賴浩敏法院」則是9.75件。現在的「許宗力法院」勵精圖治，依照迄今四又三分之一個月作成6件解釋的速度計算，一年應有18件。這種效率遠不足以應付建立「裁判憲法審查」制度後，會有如潮水般湧向大法官的聲請案件量。屆時可能經「裁量選案」後，僅受理少數案件，結果與現制無異，這可能是未來「裁判憲法審查」的「虛相」。</p><p>再者，德國聯邦憲法院對其裁判憲法訴願，深恐其被說是「超級第四審」，因此致力於憲法審判權與一般法院審判權如何分工的論述。我國未來的「裁判憲法審查」勢必要借用德國此方面的理論。然而現在的15位大法官，除司法院院長外，餘無一是留德的公法學者。大法官結構失衡，也是一問題。</p><p>最後，「裁判憲法審查」是極具專業的議題，即使法律人也未必知多少。第二分組討論此議題時，委員亦有諸多的質疑，甚至有人認為違憲。然而結果是一次會議中，委員就全數舉手通過。其中超過半數的非法律人，才剛接觸此議題，就敢舉手同意。見此情形，筆者初是心驚膽跳，接者會心一笑，最後是仰天長嘯──天啊！</p> #吳東都 #法官 #第二組 #憲法訴願 #蘋果日報 #2017-03-20
 
 
 
@@ -2084,6 +2092,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
+<p>本投書整理更新時間：2017年03月20日 20:30:24</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
@@ -2249,7 +2258,6 @@ ___
     - 周偉航
     - 高裕康
     - 余博書院
-    - 吳東都
 
 - 投書平台
   - 蘋果日報
