--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2072,6 +2072,14 @@
 ### 2017/03/20 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170320/1080564/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170320/1080564/" target="_blank">【司改交鋒】律師：大法官力行 司改就有感</a></h2><p>李劍非／律師、東吳大學法律系講師</p><p>2014年大法官做了10號解釋，2015年則僅有8號解釋，去年11月新任大法官到任，11月至12月完成3號解釋，1月迄今已作成4號解釋。</p><p>除解釋數量明顯增加，自釋字第741號解釋開始，官方網站上之解釋文及解釋理由書右邊均設有段落編號可資引用；此外，於釋字第744號解釋開始，大法官於釋字理由書第一段整理各該解釋所涉及之法規、本案事實，以及各當事人於聲請釋憲前之爭訟歷程：自釋字第743號解釋開始，公布解釋當日時同步提供各該解釋之「研習導讀」，就解釋相關事實及法律背景摘要，並分段說明解釋理由書每段內容，使大眾能更易理解解釋內容，以上誠屬進步之舉措。</p><p> </p><p>釋字747號解釋救了當事人</p><p>而最讓當事人有感的，是甫公布的釋字第747號解釋。</p><p>聲請人聲請大法官解釋獲得有利解釋時，即使是法規定期違憲宣告解釋，亦可以提起再審或其他救濟，已經大法官於釋字第725號及第741號解釋所多次重申，大法官並於釋字第725號解釋中提及：「如本院解釋諭知原因案件具體之救濟方法者，依其諭知」。</p><p>該號解釋前雖不乏有大法官具體諭知救濟方法之釋字，但畢竟較為少見，原以為釋字725號解釋將為當事人常態性開啟救濟大門，但遲至釋字第747號解釋，我們才看到大法官於理由書第七段為聲請人指南宮指明：「聲請人就聲請釋憲原因案件之土地，得自本解釋送達之日起ˇ個月內，依本解釋意旨請求需用土地人向主管機關申請徵收地上權。」</p><p>殺雞真的不需要牛刀</p><p>日前有學者於報上論戰司法改革大法官因否具有裁判違憲審查權，反對者認為基於有限司法資源，大法官審查個案是殺雞用牛刀­­；贊成者則認為救濟當事人個案權益，人民才會有感。</p><p>《憲法》從來沒有說大法官只能審查抽象法規，「只管抽象法規」其實只是大法官畫地自限的結果，大法官自可透過建立個案諭知之慣行予以改變，如果大法官往後的每號解釋都能如釋字第747號解釋，為個案當事人佛心指明幾行「個案救濟諭知」，讓當事人將來免於進入贏了釋憲卻於法院再審救濟無門的窘境，那司改無論改不改，人民也已經可以感覺到大法官身體力行的善果了。如果司改是牛刀的話，那殺雞還真的不用牛刀！</p><p>【即時論壇徵稿】</p> #李劍非 #律師 #第一組 #憲法訴願 #蘋果日報 #2017-03-20
 
+# 李克
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/20 GMT0+8:00 http://talk.ltn.com.tw/article/breakingnews/2009983
+- <h2><a href="http://talk.ltn.com.tw/article/breakingnews/2009983" target="_blank">自由開講》法庭直播可以達到公開審判的目的</a></h2><p>李克</p><p>日前法官協會強調：《公開審判不當然等於法庭直播、司改國是會議宜慎思》。司改國是會議第4分組，所列出的案例類型有: 地方法院、高等法院以及高等行政法院、智慧財產法院第一、二審案件，有關：（1）民刑事選舉案件、（2）刑事貪瀆案件、（3）危害公眾利益（例如重大經濟案件）、（4）弱勢族群及邊緣文化的訴訟和集體訴訟、（5）高度憲政爭議及政治重大矚目案件以及（6）高等行政法院所有案件，尤其食品安全、環境保護、及稅法案件等。就是因為人民不滿司法體系保守、官僚、不信任與不公正度，所以才有殷殷期盼改革的聲音！</p><p>就是因為人民不滿司法體系保守、官僚、不信任與不公正度，所以才有殷殷期盼改革的聲音！（資料照，記者叢昌瑾攝）</p><p>第4分組本月十日決議，請司法院研究一、二審法院（事實審）能否對於部分與公益相關的案件直播開庭過程，卻引發法官協會、檢察官協會反彈，分別發聲明指事實審與最高法院及憲法法庭的「法律審」不同，事實審為釐清案件事實，須傳喚證人、鑑定人等，這些人面對鏡頭恐有壓力，影響出庭意願，即使出庭也不敢暢所欲言，因為法庭外不知道有多少人、什麼樣的人正盯著直播看，甚至被告也可能因為直播形同遭受「全民公審」；此外，司法院也不贊成事實審法庭直播。</p><p>前大法官許玉秀日前投書強調，該組的決議是「不同意事實審一概不可以直播」，並非主張事實審任何案件都要直播。至於被告可能被全民公審的質疑，許玉秀提出反向思考，指出若被告是遭受冤屈的，直播對他而言可說是全民當他的後盾。從案例類型研究發現，三一九槍擊案所衍生的選舉訴訟，就是以直播方式公開審理，之後也弭平了爭議，使社會恢復平靜，這個經驗告訴我們，縱使沒有立法，我國也已經有事實審法庭直播的經驗了。前年食品安全案件的判決，引起人民高度質疑，甚至刑事法學的林鈺雄教授都公開質疑，如果食安案能夠以直播方式公開審理，也不至於加深人民對司法不信任度！</p><p>在第二組通過大法官增加受理裁判違憲審查類型之後，勢必增加大法官的工作量，所以改革對目前所有被改革的對象都會反彈，人之常情，但為國家人民好，公開、透明是建立司法信賴的必要條件，許玉秀認為法庭直播不是為了監督法官，或者說不只是為了監督法官，全心全力地投入這一次的司改國是會議，就相關議案利弊得失充分進行討論當然應該，因為我們對法官們的判決，也是有審慎評估各種證據的期待！</p><p>法協認為現行法院審判程序或判決書除依法不得公開者外，均已公開，任何人可隨時旁聽觀察，法庭並有全程錄音，得供檢視法官審理個案的態度。許玉秀認為判決書的製作和法庭程序的進行並非完全一致，錄音和錄影的差別，也不需要爭辯；難道錄音就不會洩漏隱私，錄影才會？如果人民已經滿意於目前的狀況，怎麼會有這個議題？公開審判不當然等於法庭直播，但法庭直播可以達到公開審判的目的。現代科技可以幫忙做到這點，滿足更多人民知的權利，筆者認為縱使司改國是會議結論僅具建議性質，但憑司法人的愛心良知為國為民戮力以赴，重建司法的信心，這才是司改國是會議最終的目的。</p><p>（作者為退休人員）</p> #李克 #其他 #第四組 #開庭直播 #自由時報 #2017-03-20
+
 # 林達
 ## backgrounds
 - 檢察官
@@ -2184,6 +2192,14 @@
 ### 2017/03/22 GMT0+8:00 http://www.storm.mg/article/235726
 - <h2><a href="http://www.storm.mg/article/235726" target="_blank">觀點投書：法官鐵飯碗，全民都遭殃</a></h2><p>近日遭彈劾的韓國前總統朴槿惠，因親信干政風暴，揭露出與財團私相授受的重大醜聞，參加彈劾案表決的8名法官全部投贊成票，同意罷免總統，韓國前總統朴槿惠黯然離開青瓦臺。</p><p>在韓國，人民了解政治對於國家發展的重要性，監督的力量是必要的，韓國的司法權可以彈劾不適任的總統，反觀台灣監察院的彈劾權，如同彈橡皮筋一樣，對於不適任的法官，僅能造成心理上的威嚇，並無實質的懲處。台中高等行政法院法官劉錫賢任職公職期間，擔任有限公司股東、且持股超過10%，長達22年之久，違反《公務員服務法》，因而遭監察院彈劾，還曾表示自己對法令不了解，並非故意違法，監察院彈劾案通過後卻不敢直接懲處，由司法院懲處自家人的結果，最後僅記以申誡，薪俸照領，法官照做，有恃無恐。</p><p>102年7月，台中高等行政法院法官王茂修、劉錫賢、林秋華合議裁定，不准大埔案抗爭人民的請求，裁定「不必暫停」執行，因而縣政府有機會強拆徵收戶民宅，導致張森文先生對司法救濟制度感到失望而自殺。經最高行政法院101年判字第953號判決明確指出多數違法，包括未進行實質協議價購、土地徵收審議委員會未實質審議徵收案的公益性及必要性等，再發回台中高等行政法院重審，歷經1年的審理，最後判決大埔4戶人民勝訴。但遲來的正義已經不是正義，當初合議裁定的3位法官，雖然身上背著數條人命，卻沒有受到任何懲處，不受監督的法官，即使犯了錯卻依然可以拿著法槌，繼續站在政府的一方殘害人民。</p><p>行政法院本應站在人民的立場，替人民爭取公平與正義，避免國家機器運行過程中造成人民權利的傷害，然而，行政訴訟卻往往成為人民救濟制度中的另一個陷阱。以稅務案件為例，人民在行政法院的敗訴率高達93%；反觀德國，2014年納稅義務人於上訴審獲得有利結果的比率高達42%，2013年勝訴比率也高達40%。無法有效救濟人民訴訟案的結果，導致強制執行案居高不下，根據法務部執行署－行政執行案件顯示的數據，105年欠稅、欠費件數809萬，105年家戶數856萬戶，相當於每100戶有94戶是欠稅、欠費，這對於民主國家而言是一個非常誇張的數據，不禁讓人懷疑，身為人民最終的行政救濟管道—行政法院，是否成為行政機關的打手，讓人民受到2次傷害？而最根本的原因就在於法官的終生任用制度，即使陽光法案通過，依然無法淘汰不適任法官，權力使人腐敗，絕對的權力使人絕對的腐敗，法官不是聖人，權力越大更應該受到監督。</p><p>加拿大聯邦法院法官－坎普（Robin Camp），於2014年在法庭審訊一起性侵案件時，竟問被害人：「妳為什麼不把腿夾緊？」引起全球譁然，加拿大司法委員會於2016年9月對已被停職的坎普展開調查，坎普於近日在被解職前，自動請辭。反觀台灣的法官，在缺乏正常淘汰機制下，有如黃袍加身，即使犯了錯而被停職，幾乎在接受調查後仍可繼續復職當法官，高高舉起而輕輕放下的結果，絕對是台灣人民最大的悲哀。呼籲司改會重視法官遴選與淘汰制度，尤其行政法院的法官更需要受到監督，對於不適任法官所判決過的案件，司法院更有責任主動重啟調查，逐案確認證據認定之事實，司法改革才有其意義，擁有轉型正義的司法，人民才有未來。</p><p>＊作者 為科技業工程師／公民記者</p> #杜宇宏 #其他 #法官待遇 #司法與人民脫節 #風傳媒 #2017-03-22
 
+# 段正明
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/22 GMT0+8:00 http://talk.ltn.com.tw/article/paper/1088029
+- <h2><a href="http://talk.ltn.com.tw/article/paper/1088029" target="_blank">自由廣場》檢察官若回歸成「行政官」 非全民之福</a></h2><p>◎ 段正明</p><p>撇開法律上檢察官生成史、檢察一體與偵查不公開的諸多爭論，檢察官若真完全變成「行政官」，恐非全民之福。</p><p>司改國是會議關於「檢察官定位」等問題備受注目。（資料照，記者劉信德攝）</p><p>首先是「司法官獨立性」問題，以總統洩密案言，定罪關鍵是「沒長官的檢察官」卻向「總統報告未偵結案件」，傷害了司法官「全面性」對行政權體系的獨立性，司法官獨立性當然不是行政官那種「對外不對內」的保密義務，主張檢察官「回歸行政官」者，恐怕是認可「檢察官就未進入偵查程序前的行政調查可向體系內長官報告」，那麼總統和總長洩密案未來恐怕要重新翻盤。</p><p>再者是「司法官的制衡性」，以小模謀殺案而言，媒體流傳許多不利於犯嫌某女的「調查信息」，而肇致某女受到「公審」，但士檢檢察官經「偵查後」發現，某女並非如「調查結果」般有犯罪嫌疑，於是士檢隨即放人，而非等到進入「法院後」，才讓被「公審」而體無完膚的某女受到「無罪推定」的保護。這裡檢方迅速分案偵辦「相關辦案人員」洩密罪責，正是司法官面向的監控「警察調查」功能所致。如果檢察官變成單純的「控訴官」或「行政官」，淪為「被動聽從調查結果」的人，那檢察官基於司法官獨立性內蘊之無罪推定原則而來的「偵查主體監控偵查輔佐人」之功能就消失。那麼恐怕在未來更多的社會矚目案件上，在「限期破案行政效率」和「打擊犯罪美譽」下的「冤案」爭議，將會無從止息。</p><p>檢察官體制改革的重點，不在於讓檢察官回歸為「行政官」，而在於「對被告和被害人客觀性義務的平衡」、「依法不受內部辦案行政規則約制（如假性財產犯罪規則造成詐欺氾濫等）的獨立性」、「制衡強勢被告律師團隊與監督法院的平衡配套」、「檢察體系內的轉型正義與轉任律師的司法官之行為規範」、「落實並改革偽證、洩密與濫權起訴與不起訴的監控機制」。檢察官若因這次司改承擔以往所有司法過誤，這樣的司改恐怕難有所成！</p><p>（作者為民間司改會歐洲特派員、律師）</p> #段正明 #律師 #第三組 #檢察官定位 #自由時報 #2017-03-22
+
 # 風傳媒主筆室
 ## backgrounds
 - 其他
@@ -2272,6 +2288,22 @@
 ### 2017/03/22 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14071
 - <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14071" target="_blank">張娟芬專欄：審檢不分六十年（四）</a></h2><p>我發表了前兩篇的歷史回顧以後，有些檢察官認為，「以前」確實有問題，可是「現在」都已經沒問題了。第三篇，我具體指出，「審檢不分」仍然是現在式，這問題並沒有因為拖延日久就自動消失。</p><p>那麼，審檢不分又怎麼樣呢？這是我在本篇要回答的問題。法官與檢察官一家親，究竟如何侵害被告的權利？</p><p>檢察官所做筆錄一定可信？</p><p>眾所周知，許多冤案的起點，都是被告自白。在審判中的自白通常不會有問題，因為審判是公開的，被告可以說出自己經歷的事實。可是警察所做的筆錄與檢察官所做的筆錄，不是在公開法庭裡進行，就容易產生爭議。</p><p>檢察官所做的筆錄，常被認為特別可信。例如台灣高等法院98年度囑上重更十一字7號判決，有這樣一段話：「檢察官訊問乃在發現真實，以其職務衡情尚無刑求取供之必要，是檢察官偵訊筆錄具有任意性，即足認定。」這個推論完全是錯誤的：檢察官「應該要」發現真實，就可以「證明」檢訊筆錄的任意性？「應然」如此，不代表「實然」如此。判決裡的這段文字，等於送給檢察官一張空白同意書：反正只要你說，我就信。</p><p>這個「台灣高等法院98年度囑上重更十一字7號」，不是別的案件，就是警察刑求取供的邱和順案。刑求的警察被監院彈劾，被法院判決有罪，包括假藉職務上之機會，以強暴脅迫使人行無義務之事，以及偽證；也有錄音帶、錄影帶可以證實警察刑求。檢察官的訊問經常籠罩在警察刑求的繼續效力之中，因此在警察刑求的個案裡，檢訊筆錄的可信度也應當受到嚴格檢視。但是法院全然忽略，依然用邏輯不通的語句，對檢訊筆錄照單全收。</p><p>審檢一家不是歷史陳跡</p><p>司法判決是司法系統的組織行為，不是個別法官偶然突槌。上面這段話，在該案的更十審就出現了，合議庭三位法官；上到最高法院，最高法院也沒說什麼，合議庭五位法官；發回更十一審，合議庭三位法官原樣照抄；再上到最高法院，案件就定讞了。這一路經歷了多少法官，但沒有人覺得這有什麼不對。審檢一家不是歷史陳跡，而是審判實務上不假思索的膝反射。</p><p>再舉一例。有個案子，台灣高等法院台南分院98年度上重更二字141號，法院認為被告將被害人推落水的時候，被害人還在抖動，因此認定他有不確定殺人故意。可是被告說，他以為那時候被害人已經死了，他只是幫忙棄屍而已。法院憑藉的證據，是被告在檢察官偵訊時自己說，被害人有抖動。被告說：我沒講啊！於是當庭勘驗檢訊錄音帶，證明被告所言非虛：他沒講。檢訊筆錄不實。</p><p>結果呢？結果，發現不實的那份筆錄不具證據能力，但是剩下的檢訊筆錄都照用。法官對檢察官的信任，絲毫不減，在判決裡這樣說：「實務運作時，檢察官於偵查中向被告以外之人所取得之陳述，原則上均能遵守法律規定，不致違法取供，且經法定具結程序以擔保其證言之可信性，其可信度極高，被告並未提出有何顯不可信之情形」。這段話抄襲自刑事訴訟法159條之一的立法理由。立法理由寫的是通案，是原則；在台灣高等法院台南分院98年度上重更二字141號這個個案裡，檢訊筆錄明明已經記載不實，法官還是把應然當作實然，最高法院也沒說什麼，案子也定讞了。</p><p>法官不追問檢察官為何加油添醋</p><p>沒有人去追究，為什麼被告沒有這樣說，可是檢訊筆錄卻這樣寫。法官沒有問檢察官為什麼要加油添醋。雖然這項證據無效，但判決結果並未因此改變，法官改用同案被告的證詞當作補強證據，仍然認定這名被告有不確定殺人故意。也就是，形式上雖然剔除這份偽造的檢訊筆錄，可是實質上，法官的心證依然原樣。</p><p>所以，審檢不分為什麼會侵害人民權益？在法庭上，檢方是控訴者，辯方是防禦者。法官是裁判，應當中立聽訟，也就是不偏不倚。當裁判深信控訴者都不會犯規，即使現場抓到控訴者犯規他也不處理，然後還是一往情深地相信控訴者都不會犯規，那結局就是，辯方死定啦。</p><p>審檢不分的結果，就是法庭上「兩個打一個」，法官與檢察官兩人合體，失去了原本設計的分權、制衡，國家權力沛然莫之能禦。例如臺灣高等法院94年度重上更五字第27號，被告說他的自白是被警察刑求的。更五審的受命法官林俊益，在公文上註明「請檢察官針對被告刑求抗辯指出證明方法」。檢察官是黃東焄。根據刑事訴訟法，被告做刑求抗辯時，檢察官應負舉證責任，證明沒有刑求。</p><p>但筆錄顯示，檢察官根本沒有在舉證，他只是把問題丟還給被告。例如被告說被警察灌水，檢察官就問：灌水是什麼意思，怎麼灌？等到被告描述灌水的方法，檢察官又問：每次警詢都有灌嗎？「每一次」嗎？檢察官根本沒有在「證明沒有刑求」，都是被告在「證明有刑求」；而法官不僅不要求檢察官舉證，還與檢察官輪流訊問被告。單看他們的對話，根本無法分辨誰是法官誰是檢察官，因為審檢兩人扮演的是同一角色，就是糾問者。他們的目的也完全一致，就是叫被告證明他有被刑求。法官的書面指示看似「要求檢方負舉證責任」，但操作上變成「邀請檢方針對刑求問題與法官一起訊問被告」。對被告權益的損害，莫此為甚！</p><p>這是我們為何應該思考檢察官的角色，不是為了跟檢察官過不去，也不是「歐陸派vs.英美派」的法律人茶壺裡的風暴。是因為，如果檢察官沒有適當的定位，審檢繼續不分，法院就不可能公平。值得注意的是，上面所舉的所有例證，都是號稱最謹慎的死刑案件。倘若還要繼續無視審檢不分的事實，究竟是天真無邪，還是粉飾太平？</p><p>【延伸閱讀】</p><p>張娟芬專欄：審檢不分六十年（一）</p><p>張娟芬專欄：審檢不分六十年（二）</p><p>張娟芬專欄：審檢不分六十年（三）</p> #張娟芬 #其他 #第三組 #檢察官定位 #上報 #2017-03-22
 
+# 郭瑜芳
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/03/23 GMT0+8:00 http://www.storm.mg/article/235392
+- <h2><a href="http://www.storm.mg/article/235392" target="_blank">郭瑜芳觀點：寧靜的司法改革─紅勾社區司法中心</a></h2><p>位在美國紐約布魯克林區西南角、因港口遷移而被遺忘的紅勾港，於1980年代毒品快克（cracker）席捲全美之際，因多數居住人口屬於失業勞工，此地迅速淪為毒品、槍枝、暴力氾濫的社區。居民為非洲裔與西語裔為主的經濟弱勢族群，不斷在「毒品生物鏈（註）」的漩渦中掙扎。76%的人白天不敢出門，惟恐一不小心就被幫派份子在街頭火拼的流彈射中；晚上睡覺只能席地而眠，因為不長眼睛的子彈將隨時破窗而入。這裡是犯罪的淵藪，人間的地獄。</p><p>傳統刑事司法制度顯然對紅勾地區的犯罪問題束手無策。就在最黑暗的時期，紅勾社區司法中心( Red Hook Community Justice Center)在2000年設立，試圖對積重難返的毒品與社區治安犯罪問題，提出新的解決機制。筆者奉派於紐約大學訪問期間，有幸實地參訪紅勾中心，近距離觀察這場寧靜的司法改革工程。</p><p>紅勾中心是綜合性的小型地區法院，該區人口數共計20萬人，每年受理3個紐約市分局移送之3000件輕微犯罪（包括持有毒品、交通違規、侵入住居、傷害等）、11000件行政違規、175件少年事件、以及500件租屋民事糾紛。唯一的法官卡拉布列斯（Alex Calabrese）相信，社區服務、戒毒計畫、接受教育與職訓，比監獄更能有效降低犯罪問題；以和解代替訴訟來解決租屋糾紛，也能減少民眾使用司法資源，並且更快速解決爭端。</p><p>在這棟由天主教學校改建而成的3層樓建築裡，有許多出人意料的配置。唯一的法庭中，觀眾、當事人、律師、檢察官、法官，所有人的座位都在同一水平面上，法庭活動淡化國家威權色彩，當事人與法官平行對話，為自己與案件尋求解決之道。</p><p>B1的拘留室以透明強化玻璃取代鐵條，隔著走廊的另一面牆，頂端開著一片片天窗，陽光毫不吝嗇的充滿拘留室的每個角落。這裡的嫌疑犯不再禁錮於黑暗冰冷的囚籠中，反而能在溫暖明亮的陽光裡，等候法官提審。</p><p>另外，司法中心2樓設有教室與職業訓練室，被法官裁定接受教育或職訓的被告，就在這裡上課或接受訓練。訓練的師資是由其他政府部門提供，上課或受訓期滿，法官會在法庭上為被告頒發證書，書記官、庭務員、法警在旁觀禮、鼓掌道賀，肯定其成就，對幫助被告建立信心、重新回歸社會，有顯著成效。</p><p>在戒毒治療與戒酒治療計畫方面，紅勾中心以委外的方式處理。也就是說，紅勾中心將裁定接受治療計畫的被告，按個人不同的需要，轉介至各個不同的治療場所。雖然和其他刑事法院的做法類似，值得注意的是，紅勾中心會按時追蹤被告治療的進度，了解治療成效，如果被告不適合或不適應，紅勾中心會重新為被告另做安排，以落實個案治療的追蹤與評估。</p><p>對紅勾中心的做法，人民的看法如何？根據實證資料顯示，被紅勾中心法官裁定接受處遇的被告，更願意遵行裁定的內容，其遵行的比例約為75%，遠高於普通法院50%的遵行比例，而且紅勾社區居民對司法的採取「正面評價」的比例更達94%。</p><p>紅勾中心的成功經驗，使美國各地陸續成立數十個「社區法院」，也引起加拿大、澳洲、南非與新加坡等其他國家的興趣。此時正值我國召開司改國是會議之際，國內毒品氾濫的問題，正亟待各界共同合作拿出解決良方。紅勾中心對於毒品案件、輕微刑事案件的處理，添加更多人性關懷，採取治療代替監禁、教化代替處罰的方法，協助被告復歸社會的經驗，或許值得我們進一步參考。</p><p>（註：「毒品生物鏈」，是指吸毒人被販毒人所控制，販毒人被幫派所控制，幫派之間相互暴力火拼爭取地盤。許多人的最終結局，不是進入監獄，就是橫死街頭。）</p><p>＊作者為台北地檢署檢察官</p> #郭瑜芳 #檢察官 #第五組 #毒品 #風傳媒 #2017-03-23
+
+# 劉繼蔚
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/23 GMT0+8:00 http://pnn.pts.org.tw/main/2017/03/23/%E4%B8%8D%E6%83%B3%E4%BA%A4%E6%9C%8B%E5%8F%8B%E7%9A%84%E6%86%B2%E6%B3%95%E6%B3%95%E9%99%A2/
+- <h2><a href="http://pnn.pts.org.tw/main/2017/03/23/%E4%B8%8D%E6%83%B3%E4%BA%A4%E6%9C%8B%E5%8F%8B%E7%9A%84%E6%86%B2%E6%B3%95%E6%B3%95%E9%99%A2/" target="_blank">不想交朋友的憲法法院</a></h2><p>文 / 劉繼蔚</p><p>司法院大法官為同性婚姻釋憲案召開言詞辯論，因近年模擬憲法法庭的操練，各界開始認識其中「法庭之友」的制度，並有多組個人、團體循此向大法官陳述意見，其中亦不乏司法官、法律學者、律師等法律工作者。</p><p>然而日前，司法院卻發布新聞稿指出：「現行司法院大法官審理案件法，尚無『法庭之友制度』的明文規定，司法院過去已提出相關修法草案，仍待立法院審議。不論是法庭之友資格要求、利害關係揭露、須兩造及法院同意等規定，都需要更細緻、完善的制度設計，才能讓法庭之友的意見能具備專業性，有助於大法官進行憲法爭議的審理。基於上述考量，本院大法官討論後認為，雖然本案涉及重大公益，『法庭之友制度』仍待完善制度建立後再採行較為妥適。」似乎認為，在司法院大法官審理案件法將法庭之友正式法制化以前，沒有人能向大法官陳訴意見。</p><p>真的是如此嗎？依照司法院釋字第185號解釋，大法官解釋的效力，拘束全國各機關及人民，亦即大法官解釋是對所有人都發生效果。大法官解釋某項法令違憲，無論是否為該原因案件的聲請人，所有人都會連帶地受到大法官解釋的影響。也就是說，無論是否為釋憲程序的聲請人或有關的行政機關，都可能因為大法官解釋憲法、變動法律秩序的結果，失去或者獲得某種法律上的權利，又或者，變更自身的法律地位或狀態。從負面的方向來說，就好像有人去跟老師打小報告，老師也沒聽人解釋，就把人教訓了一頓，任誰恐怕都不會甘願。</p><p>憲法法庭。( 由Jiang – 自己的作品，創用CC 姓名標示-相同方式分享 3.0，連結 )</p><p>就拿這次同性婚姻來說吧，不論正反雙方或許都覺得：「啊婚姻這麼重大的事件，大法官不聽聽我們的感覺，不聽聽我們的想法，就要自己決定要不要讓同性結婚了呢」，反對的人希望大法官聽聽，他們對於同性如果能使用現行法律的婚姻制度結婚，可能會讓他們感到的不安；支持的人也希望大法官聽聽，有那麼多的人盼望跟他的愛侶（或未來的愛侶）的結合，不是只能自爽、甚只能讓家庭或人際的認可，甚至可以得到國家法律的支持，與「正常」人一樣使用法律上的各種制度，「假。裝。」自己與「正常」人並無不同。不只是聲請人想要請大法官給個說法，所有覺得自己會被制度影響的人，莫不心裡都存著這份心思，希望大法官聽聽我們的心聲。</p><p>不管是從大法官解釋客觀效力影響的角度，或者從受到影響的人主觀上期待其意見能受到傾聽的角度，我們都不難想見，應該賦與相關人陳述意見的機會。這其實也就是大法官在非常多號解釋中，不斷重申與強調的「正當法律程序」原則的體現。具體來說，對於權利義務可能因為程序受到影響的人，應該賦予他參與程序，影響決定的機會。大法官每每要求行政機關、立法機關、法院，應該要注意正當法律程序，那麼大法官作成解釋的正當法律程序呢？何況，我國司法院大法官審理案件法雖然沒有「法庭之友」，但在該法第13條第1項，有權請求向大法官會議說明的「關係人」，顯然依照正當法律程序的解釋，就應該認為，包括任何主張其權利可能因解釋而受到影響的第三人，都可以作為這裡所指的關係人，請求向大法官會議陳述意見。</p><p>現任司法院大法官。( 照片來源：司法院網站 )</p><p>行文至此，覺得無比諷刺，大法官依照司法院釋字第601號解釋，是憲法上之法官，也有遵守憲法、觀照憲法的義務。甚至歷來在大法官解釋中，亦指示並要求法官應遵守憲法，結果大法官自己在適用司法院大法官審理案件法時，竟不能依照大法官歷來解釋，對相關條文為合乎憲法意旨的詮釋，並依合憲的法規意旨作為。「司法院大法官審理案件法沒有法庭之友的明文，本會依法行政、依法審理，謝謝指教」，一副事不關己，己不操心的模樣。既然大法官都只在挑剔小法官時，才會講憲法，亦無怪乎大院長會認為小法官都不能發揮在個案中把關憲法的職分，而需要裁判之憲法審查。畢竟，連大法官也未必想在自己的法庭談憲法呢！</p><p>總的來說，大法官會議願不願意如他們挑剔小法官一般，在自己的法庭，貫徹其漂亮、華麗的憲法原則，才是法庭之友能不能蒙憲法法庭重視的關鍵。交友貴乎在誠，抱持這樣拒人於千里外的晚娘態度，法庭還交得到真心相待的朋友嗎？</p><p>本文作者為執業律師。作者相關評論與報導列表</p> #劉繼蔚 #律師 #法庭之友 #公共電視PNN #2017-03-23
+
 # 王明亮
 ## backgrounds
 - 其他
@@ -2280,13 +2312,13 @@
 ### 2017/03/23 GMT0+8:00 http://www.storm.mg/article/236376
 - <h2><a href="http://www.storm.mg/article/236376" target="_blank">觀點投書：廢了與人民為敵的行政法院</a></h2><p>名模林若亞抗稅案獲得大法官釋憲成功，據說可以造福540萬薪資所得者。聲請釋憲的法官錢建榮被稱為釋憲達人，他表示「我的想法是要洗刷行政法院只保護機關、不保護人民的惡名」。這則報導引起筆者關注，原來人民在行政法院的敗訴率是94%，即使人民官司勝訴了，行政法官也不敢自為判決，將稅單退回行政機關做「另為適法之處分」，使得人民疲於奔走於行政機關與行政法院之間。</p><p>錢建榮法官坦言，他在擔任行政訴訟庭法官期間審理的稅法案件，幾乎超過50%是判納稅義務人勝。然而國稅局一上訴到高等行政法院，就會變成國稅局勝。因此，判人民勝的稅法判決，維持率是零。</p><p>筆者朋友經營小吃店，曾透露有的稅務員課稅時，位於同一個路段的店面，就課以相同的金額，根本不管店家生意如何，即使是淡季也課以相同金額，沒有辦法經營下去的店面就只好歇業。這樣齊頭式的課稅方式，叫小本經營的店家如何經營下去？這是制度上的問題？還是執行者的問題？</p><p>有的企業無故收到稅單，而且稅金還可以商議，難怪台北商業大學財政稅務系兼任助理教授蔡孟彥提到：「稅好像在拍賣場在討價還價，國家好像變成是黑道了，國家在收的其實有點像是保護費。」。人民有納稅的義務，但是也應該保障人民的財產及生存權，官字兩個口，稅官不能隨便想怎樣就怎樣。</p><p>前立法委員羅淑蕾曾說：「稅務體制根本沒有人權可言！因為行政裁量權太大了！對於稅務員沒有懲罰機制」因此官員有恃無恐，宛如威權時代稅制的延續，而且稅務行政人員違法發單時，又死不認錯，法院是正義的最後防線，但人民在行政法院的敗訴率是94%，這樣的法院正如錢建榮法官所說「行政法院只保護機關、不保護人民」，還有必要存在嗎？</p><p>近日還發生台中高等行政法院秋華、劉錫賢、莊金昌三位法官，審理稅務案件，悖離證據，只採用國稅局答辯狀，忽略對人民有利的證據，還公開說自己年紀大了，對於有利於人民的證據，很快就忘記了，被控告枉法裁判。法官完全不在乎人民的死活，行政法院只保護機關、不保護人民，這樣還不如廢了與人民為敵的行政法院。</p><p>＊作者為退休教師</p> #王明亮 #其他 #行政法院問題 #風傳媒 #2017-03-23
 
-# 吳忻
+# 吳忻穎
 ## backgrounds
 - 檢察官
 
 ## articles
 ### 2017/03/23 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14091
-- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14091" target="_blank">投書：磕磕碰碰又披荊斬棘的檢察官之路</a></h2><p>筆者閱讀黃奕超法官為文〈「控制」基層法官的神秘力量〉後，心中甚有感觸，不知不覺想從檢察官的立場出發，將該文其中某段內容改編如下：</p><p>檢察官是不是行政官我不知道，我只知道鄉民只看新聞標題，行政人員只看到卷宗，法官看到建築在卷宗事實磐石上的正義城堡，而檢察官除了看到法官所見的那座正義城堡外，還要負荷著的犯罪人矯治工作，這種抽象思考過程、具體執行坎坷、隨時被友軍倒打一把以及沒有奧援、金錢拮据的可悲是外人看不到的，但卻是每個基層檢察官的日常：戴著發亮的小鋼盔在事實的泥淖裡匍匐前進，只為找到一條通往正義以及實現正義的路（而且山坡上也不會出現什麼司法改革援軍，還有頂呱呱法學派朝向檢察官丟石頭，甚至暗暗嘲笑這群沒有金錢、沒有資源卻傻得想要發現真實，救贖受刑人、受保安處分人的檢察官不夠聰明）。</p><p>偵查、公訴、執行，都是檢察官的工作。</p><p>我膽敢說，檢察官所見的刑事訴訟過程、被告到受刑人過程的全貌，可能比法官更多；檢察官是整部刑事訴訟法以及特別法所規範，實踐程序正義追求實體正義的過程中最重要角色。</p><p>不信大家可以翻看看刑事訴訟法從第1條到最後1條，一大堆條文可能與法官、律師無關，但是卻沒有與檢察官完全無關的條文。</p><p>誠如許澤天教授為文投書〈許澤天觀點：檢察官的任務與定位〉所言：「檢察官所扮演的不僅是在外觀看來「兩造對抗」的審判時公訴角色，更是偵查的主導者」，「在今日已成為決定案件與被告命運的核心關鍵」。</p><p>檢察官業務之繁重，諸多檢察官業已紛紛投書具體說明，因應新興犯罪、密室犯罪、貪瀆犯罪等發覺之困難以及犯罪手法日新月異，檢察官必須帶領司法警察在有限的偵查手段（立法者出於報復的心理甚至不當剝奪檢察官的強制處分權，通信調取票的限制即為顯例）、貧困到連傳票郵務費都必須節省的狀況下，去發現犯罪、找到證據，並且在公訴階段鞏固偵查的努力，在在考驗檢察官的智慧。</p><p>圈內人都知道，當夕陽落下，夜之黑幕升起，正是地檢署每間辦公室燈火亮起的時候，專案行動、人犯訊問、聲請羈押，往往都是在傍晚過後才開始（日間時段大部分都是進行搜索、警詢，人犯往往在天黑後才送到地檢署）。基層檢察官忙於犯罪偵查，還常常必須面對上級不合理的指令，或是一些外來的力量干預。</p><p>檢察署隸屬於法務部、法務部隸屬於行政院，如果沒有賦予司法官的角色，檢察官如何抵抗民意代表三不五時的「關切」？如何謝絕法務部國會聯絡組三不五時不分輕重的傳真？</p><p>如果沒有司法官的獨立性，如何應付上級亂無章法、脫離現實的指令？</p><p>除了許澤天教授所述檢察官於偵查中的任務外，筆者還要補充的是，法官判決固然宣示了實體正義，但最後正義的實現、受刑人（受保安處分人）的矯正、沒收制度的財產正義實現，都是檢察官的事情。</p><p>只有檢察官才能見到一個人從被告身分到受刑人身分的完整歷程。</p><p>執行指揮書、易刑處分之准駁、監獄視察、醫療機構視察、易服社勞人視察與監督、保外就醫、保護管束、觀護人業務督導，還有緩起訴條件的執行等等，全部都是檢察官在做的事情。</p><p>法官可以看到被告在法庭演一場戲，律師可以看到對被告有利事項的片面事實。但在審判的試煉結束後，只有檢察官知道，一個受刑人是不是真正悔過，也知道假釋人滿身標籤融入社會的磕磕碰碰，看到酒癮、毒癮者在底層的掙扎，然後默默的為他們難過，甚至落淚，然而因如今刑事矯正政策的顢頇與貧瘠，束手無策。</p><p>我心目中最理想的檢察官圖像是嚴厲的仁慈者，可惜不懂刑事實務的人們（包含某些學者）只看到檢察官表面上的嚴厲，看不到檢察官的仁慈，更看不到檢察官眼睜睜看著一個受刑人、假釋人社會化失敗的過程而掉的眼淚。</p><p>巧婦何能為無米之炊？</p><p>※作者為澎湖地方法院檢察署檢察官</p><p>【延伸閱讀】</p><p>投書：「控制」基層法官的神秘力量</p> #吳忻 #檢察官 #檢察官職務 #上報 #2017-03-23
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14091" target="_blank">投書：磕磕碰碰又披荊斬棘的檢察官之路</a></h2><p>筆者閱讀黃奕超法官為文〈「控制」基層法官的神秘力量〉後，心中甚有感觸，不知不覺想從檢察官的立場出發，將該文其中某段內容改編如下：</p><p>檢察官是不是行政官我不知道，我只知道鄉民只看新聞標題，行政人員只看到卷宗，法官看到建築在卷宗事實磐石上的正義城堡，而檢察官除了看到法官所見的那座正義城堡外，還要負荷著的犯罪人矯治工作，這種抽象思考過程、具體執行坎坷、隨時被友軍倒打一把以及沒有奧援、金錢拮据的可悲是外人看不到的，但卻是每個基層檢察官的日常：戴著發亮的小鋼盔在事實的泥淖裡匍匐前進，只為找到一條通往正義以及實現正義的路（而且山坡上也不會出現什麼司法改革援軍，還有頂呱呱法學派朝向檢察官丟石頭，甚至暗暗嘲笑這群沒有金錢、沒有資源卻傻得想要發現真實，救贖受刑人、受保安處分人的檢察官不夠聰明）。</p><p>偵查、公訴、執行，都是檢察官的工作。</p><p>我膽敢說，檢察官所見的刑事訴訟過程、被告到受刑人過程的全貌，可能比法官更多；檢察官是整部刑事訴訟法以及特別法所規範，實踐程序正義追求實體正義的過程中最重要角色。</p><p>不信大家可以翻看看刑事訴訟法從第1條到最後1條，一大堆條文可能與法官、律師無關，但是卻沒有與檢察官完全無關的條文。</p><p>誠如許澤天教授為文投書〈許澤天觀點：檢察官的任務與定位〉所言：「檢察官所扮演的不僅是在外觀看來「兩造對抗」的審判時公訴角色，更是偵查的主導者」，「在今日已成為決定案件與被告命運的核心關鍵」。</p><p>檢察官業務之繁重，諸多檢察官業已紛紛投書具體說明，因應新興犯罪、密室犯罪、貪瀆犯罪等發覺之困難以及犯罪手法日新月異，檢察官必須帶領司法警察在有限的偵查手段（立法者出於報復的心理甚至不當剝奪檢察官的強制處分權，通信調取票的限制即為顯例）、貧困到連傳票郵務費都必須節省的狀況下，去發現犯罪、找到證據，並且在公訴階段鞏固偵查的努力，在在考驗檢察官的智慧。</p><p>圈內人都知道，當夕陽落下，夜之黑幕升起，正是地檢署每間辦公室燈火亮起的時候，專案行動、人犯訊問、聲請羈押，往往都是在傍晚過後才開始（日間時段大部分都是進行搜索、警詢，人犯往往在天黑後才送到地檢署）。基層檢察官忙於犯罪偵查，還常常必須面對上級不合理的指令，或是一些外來的力量干預。</p><p>檢察署隸屬於法務部、法務部隸屬於行政院，如果沒有賦予司法官的角色，檢察官如何抵抗民意代表三不五時的「關切」？如何謝絕法務部國會聯絡組三不五時不分輕重的傳真？</p><p>如果沒有司法官的獨立性，如何應付上級亂無章法、脫離現實的指令？</p><p>除了許澤天教授所述檢察官於偵查中的任務外，筆者還要補充的是，法官判決固然宣示了實體正義，但最後正義的實現、受刑人（受保安處分人）的矯正、沒收制度的財產正義實現，都是檢察官的事情。</p><p>只有檢察官才能見到一個人從被告身分到受刑人身分的完整歷程。</p><p>執行指揮書、易刑處分之准駁、監獄視察、醫療機構視察、易服社勞人視察與監督、保外就醫、保護管束、觀護人業務督導，還有緩起訴條件的執行等等，全部都是檢察官在做的事情。</p><p>法官可以看到被告在法庭演一場戲，律師可以看到對被告有利事項的片面事實。但在審判的試煉結束後，只有檢察官知道，一個受刑人是不是真正悔過，也知道假釋人滿身標籤融入社會的磕磕碰碰，看到酒癮、毒癮者在底層的掙扎，然後默默的為他們難過，甚至落淚，然而因如今刑事矯正政策的顢頇與貧瘠，束手無策。</p><p>我心目中最理想的檢察官圖像是嚴厲的仁慈者，可惜不懂刑事實務的人們（包含某些學者）只看到檢察官表面上的嚴厲，看不到檢察官的仁慈，更看不到檢察官眼睜睜看著一個受刑人、假釋人社會化失敗的過程而掉的眼淚。</p><p>巧婦何能為無米之炊？</p><p>※作者為澎湖地方法院檢察署檢察官</p><p>【延伸閱讀】</p><p>投書：「控制」基層法官的神秘力量</p> #吳忻穎 #檢察官 #檢察官職務 #上報 #2017-03-23
 
 # 張維志
 ## backgrounds
@@ -2300,6 +2332,30 @@
 ### 2017/03/23 GMT0+8:00 https://www.facebook.com/TajfunInsulo/posts/1330180180351455?pnref=story.unseen-section
 - <p>好巧，這一篇，又和我昨天看判決書後的「心得」一致。</p><p>如果再加上之前得知某位法官想知道，檢察官是否有濫用上訴權。我其實也有過一樣的疑問。但是，要回答這樣的問題，我們到底需要哪些資料來做分析？這卻是我不知道的... (所以我問的是，上訴後，判決結果維持原判的比例多少。據說大約 80-85% - 但這什麼意思？我也不知道）</p><p>這其實也是我一直想知道的。面對這麼多司法的問題，我們到底需要哪些「證據」來說明。從判決書真的可以告訴我們許多事情。但是除了判決書，我們還須要什麼？起訴書？還有呢？然後到刑罰的執行時，我們又需要哪些資料？</p><p>這其實是一個我認為到現在還沒人也沒人要說清楚的點。雖然我試著去要司法院和法務部更公開透明。但是老實說，我能要求的，都還是從一個司法外行人的角度來看這一切。我能提出的也只是比較全面但表面的需求。因為很多東西是需要花時間，去瞭解，才可能深入的。</p><p>而我，就算身在委員會內，其實每天，每個禮拜，每次會議之間能花在這個主題上的時間真的有限。在這情況之下，到底誰要來提出更深入的問題，讓我們一起來找答案？</p> #張維志 #其他 #議事程序 #其他平台 #2017-03-23
 
+# 蔡志宏
+## backgrounds
+- 法官
+
+## articles
+### 2017/03/24 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082876/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082876/" target="_blank">【司改交鋒】陪審、參審的關鍵抉擇：準備好改變了嗎</a></h2><p>蔡志宏／智慧財產法院法官</p><p>進行中的司法改革國是會議，第四組討論的議題，包括長久以來各界高呼倡議，卻始終未能實現的人民參與審判制度。這項議題的討論結果，可能徹底改變司法審判的向來面貌，也將牽動著許多配套制度的司法資源配置，可謂此次會議的重中之重。</p><p>不過，由於此項議題牽涉層面甚廣，制度設計與價值偏好相互影響，加深了議題討論與議決的難度。這一點，從第四組第一次會議的討論情況以及決議加開公聽會，就可以得到印證。就此我認為可以先從陪審制與參審制所可能衍生的價值傾向，加以分析探討，幫助非法律人的國是委員乃至社會大眾，更容易了解自己對於陪審或參審的抉擇取向。</p><p>三大問題可以幫助自己決定傾向支持陪審或參審制：</p><p>一、如果因為證據有限，不得已必然做出錯誤判決，你是寧願：ａ、冤枉好人；還是ｂ、縱放壞人？</p><p>二、如果因為預算有限，不得不限制素人參與審判的整體規模，你是選擇：ａ、每一個案件中少一點素人參與，但讓更多案件可以有素人參與；ｂ、想辦法找出最有需要素人參與的較少案件，讓這些案件都有多一點素人參與審判？</p><p>三、素人參與審判時，你是希望：a、素人與法官一起決定事實及法律，但法官與素人間的溝通討論不公開進行；b、法官公開指示解釋應適用的法律後，由素人自己決定事實以及法律適用的結果？ </p><p>如果你的答案是b多於a，這表示你更傾向支持陪審制；反之，則是傾向支持參審制。這是因為通常在陪審制中，每個案件參與審判的素人較多，自然無法負荷過多的陪審案件（與問題二有關），也因為素人較多，各種對於案件的觀點併陳，又沒有法官參與其中，因而較難形成判決結論（與問題三有關），在無形中也就提高了有罪判決的舉證要求，導致比較不容易冤枉無辜，但相對地就可能讓真正有罪之人脫免責任（與問題一有關）。</p><p>在我曾經參與模擬陪審審判的有限經驗中，一次陪審團判決無罪，一次陪審團無法得出判決結果，多少也反映出這樣的價值特色。不過，無論怎樣的答案組合，都是價值偏好的結果，並非有絕對的對錯，這也是必須由非法律人共同參與的根本理由。因為，這就是一項重要的政治決定。 </p><p>人民參與審判的制度決策與執行，需要跨部會乃至院際的協調與合作，始能克竟其功。過去觀審制單由司法院推動而以失敗告終，正是歷史教訓的明證。此次司改國是會議突破過往的框架與格局，應是人民參與審判得以本土化落實的最佳契機，也是人民徹底讓司法脫胎換骨的最好轉機。但如果始終在陪審、參審猶豫不決，又如何進一步討論更多的制度細節與配套措施？</p><p>司改國是會議即將在明天就人民陪、參審制度召開公聽會，與會的非法律專業委員，不妨自我檢測自己的價值認同所在，盡早做出這歷史上關鍵的抉擇！</p> #蔡志宏 #法官 #第四組 #人民參與審判 #蘋果日報 #2017-03-24
+
+# 林煜騰
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/24 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082879/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082879/" target="_blank">【司改交鋒】陪審、參審的關鍵抉擇：鞋買一隻腳較划算？</a></h2><p>林煜騰／律師、民間司改會執行委員</p><p>司法改革國是會議中人民參與審判的議題討論得沸沸揚揚。到底是要採取「人民法官一起判」的參審制度，還是「法官認定法律、人民認定事實」的陪審制度難有共識，筆者亦曾參與司改會多次的陪審團模擬嘗試釐清其優劣。若將人民的意見納入審判是個趨勢，就不得不回歸制度的初衷作為選擇的基礎。 </p><p>依司法院人民參與審判網站描述，推動此制度目的是希望人民參與審判後「理解法官工作的內容及法律規範的精神」並「表達對法律適用的普遍看法」，透過法官與人民的對話，提升對於司法的信賴與尊重。 </p><p>由於不論在參審或陪審制度下，都可達成相同的目的差別只是在效用的高低。因此何種制度「較省錢」，就成了制度選擇上的一種考量。陪審制度需要人數最多（9名或12名陪審員），審理過程可能最長，因此就有認應採取「參審」制。然而，不論參審或陪審制度都必須建置參審（陪審）員選任系統、發放旅費、佔用人民時間等等，這些成本和現行制度相比都是龐大開銷。在制度選擇上難道要考量的「最便宜」？而不是務實的評斷何者「最有效」？ </p><p>事實上不論參審或陪審，對人民而言都是勞力、時間、費用的負擔，並要承受案件審理的心理壓力。對人民而言真正重要的是坐上審判席後，自己的意見能不能變成判決結果。參審制讓法官引導人民思考，立意良善，但近期司改會統計司改國是會議的發言狀況，非法律人發言比率偏低（最低12%，最高44%），就可見非法律人難以自在的與法律人討論案情。在法律人主導非法律人噤聲的審判，或人民意見不能影響法官決定、而法官又不能說服民眾的情況下，豈不只是近距離的加深人民對於司法的不信賴？ </p><p>再者，讓民眾可以透過審判了解法規範的精神，必須檢、辯雙方攻防淺顯易懂，讓人民可以理解案情。然而若檢辯早可預期是由法官主導，民眾影響判決結果的機會渺茫，又何來誘因進行白話的攻防？ </p><p>在陪審制度下法官仍要「依法」審判，在案件審理前後，都要向陪審員說明審理的原則和法律，以確保能根據法律要件認定事實，透過此分工也可降低法官負擔。但在參審制下，法官要告知參審員審理案件的原理原則，又要將自己意見與陪審員磨合，於法官早已過勞的情況下只是更加重負擔。若終局都是要多數決，法官是否還有心力可以好好地跟民眾溝通更是問號。當法官無法心平氣和的引領民眾討論，也只是拉遠司法與人民的距離。 </p><p>另一個值得關注的議題是，陪審制是否會因欠缺正當程序且因人民素質不佳而影響被告權益？此問題的關鍵是選擇陪審團從來都不是被告的義務，而是權利，人民也可選擇由職業法官審理。不同制度有不同優劣，若被告相信人民素質，選擇陪審團審理，何以會有權益受損可言？況且，本來就可以有相對應的制度設計來補強陪審制度的缺失。 </p><p>在司改如火如荼之際，不論參審和陪審都是一大變革非一 蹴可幾，且應建立後續配套措施。但在制度決策上，應該有更多的理解、嘗試與比較，並以效用作為優先考量。貿然購入「一隻腳」的鞋子，不會是撿到便宜，更多時候只是一種浪費。</p> #林煜騰 #律師 #第四組 #人民參與審判 #蘋果日報 #2017-03-24
+
+# 周敏煌
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/24 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14097
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14097" target="_blank">投書：隔行如隔山　法官豈能通百業</a></h2><p>資深媒體人周玉蔻三億男事件，日前被台北高等法院民事庭判賠，輿論炒得沸沸揚揚，連司改反撲等陰謀論都出爐，這種種的觀察角度都有理，解讀也都脈絡分明，但就筆者的實務經驗而言，個人認為應該是隔行如隔山，法官不能通百業所導致。</p><p>三億男是誰？被周玉蔻採訪的柯Ｐ願站出來，比新聞學上要求的「不能透露消息來源」，處境更佳，報導論述已經「有所本」，何況更有大法官第509號解釋文以及美國最高法院的保護新聞與言論自由處理五原則相挺。二審判決主軸的沒有經過「相當查證」，理由就顯得相對單薄又失衡。⋯⋯</p><p> </p><p>幾年前，台中有一位林姓女老師，因男友白姓醫師移情別戀，於是在轄區警分局狀告白醫師性侵，還提出墮胎的醫療記錄來佐證。中國時報有一位陳姓年輕記者於是根據警方的報案記錄，報導這起疑似性侵案，見報不久白醫師獲不起訴處分，陳記者卻反被白醫師控告妨害名譽，台中地方法院一審判刑4個月，令人訝異。</p><p>二審時，原告和被告、雙方律師陣容相同，但審判長換了一個滿頭白髮的資深法官，雙方所主張的侵權、新聞言論自由等論點大同小異，陳記者眼看節節敗退，商請筆者出席當證人，筆者將一則新聞的產出過程，和新聞生態、操作模式一一闡述，審判長聽得津津有味，留下一句「原來新聞是這樣產出的，責任是這麼切割的，今天讓我長了知識」，當然最後也無罪定讞。</p><p>此案中，審判長最在意的就是「有所本」，陳記者根據警分局的報案記錄撰寫成新聞見報，顯見並非憑空杜撰，是職業性質所要求。另外白醫師也主張檢方對他不起訴，陳記者顯有惡意，但筆者提出院方一、二審判決大異其趣的，比比皆是，不能說一審有罪、二審無罪，就說一審判錯了，遑論對一審法官究責，各行各業有各自的生態與規矩，隔行如隔山，審判長聽進去了。</p><p>我司法官晉用與養成教育，很多都是家門—校門—衙門，一路挺進這個圈子，而且司法院與法務部三申五令要司法官避免無謂的應酬，他們對生活常識與社會百態的了解本就相當侷限，何況是不斷因應時代而生的百業生態。法官不通百業，你我也無法通百業，生涯有限，知識無限，情有可原，所以是該採用多人參與聽審的參審制或陪審制了。</p><p>※作者為文字工作者</p> #周敏煌 #其他 #第四組 #人民參與審判 #司法與人民脫節 #上報 #2017-03-24
+
 
 
 
@@ -2308,7 +2364,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年03月23日 17:33:26</p>
+<p>本投書整理更新時間：2017年03月24日 18:18:03</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
@@ -2380,7 +2436,8 @@ ___
     - 吳協展
     - 高永翰
     - 黃謀信
-    - 吳忻
+    - 郭瑜芳
+    - 吳忻穎
   - 律師
     - 高榮志
     - 黃盈嘉
@@ -2411,7 +2468,10 @@ ___
     - 林志忠
     - 蘇友辰
     - 賴瑩真
+    - 段正明
     - 裘佩恩
+    - 劉繼蔚
+    - 林煜騰
   - 學者
     - 李念祖
     - 李復甸
@@ -2482,10 +2542,12 @@ ___
     - 高裕康
     - 余博書院
     - 鄭宥勝
+    - 李克
     - 侯友宜
     - 杜宇宏
     - 風傳媒主筆室
     - 王明亮
+    - 周敏煌
 
 - 投書平台
   - 蘋果日報
@@ -2576,6 +2638,7 @@ ___
   - 法官退休金
   - 法官過勞
   - 法官遴選
+  - 法庭之友
   - 法庭直播
   - 法律人特質
   - 法律白話文
@@ -2604,6 +2667,7 @@ ___
   - 重刑化
   - 鑑定制度
   - 鑑識
+  - 開庭直播
   - 防逃追錢
 
 - 投書日期
@@ -2687,4 +2751,5 @@ ___
   - 2017-03-21
   - 2017-03-22
   - 2017-03-23
+  - 2017-03-24
 
